manifests-local/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-deployment
  template:
    metadata:
      labels:
        app: test-deployment
    spec:
      containers:
        - name: test-box
          image: ubuntu:18.04
          command:
            - sleep
            - "infinity"
          imagePullPolicy: IfNotPresent
