manifests-local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sumdrill-deployment
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sumdrill
  template:
    metadata:
      labels:
        app: sumdrill
    spec:
      containers:
        - name: test-box
          image: ubuntu:18.04
          command:
            - sleep
            - "3600"
          imagePullPolicy: IfNotPresent

        - name: frontend-container
          image: pimpbot9000/sumdrill-frontend:latest
        - name: backend-container
          image: pimpbot9000/sumdrill-backend:latest
