manifests-local/backend-service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-internal
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: sumdrill # pod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
