manifests-local/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: sumdrill # Pod
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
