manifests-local/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: sumdrill # Pod
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 80
