manifests-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sumdrill-ingress
  namespace: project
  #annotations:
  #  traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: frontend-service
            port: 
              number: 3456
